# conan-cmake-template

./: CMakeLists.txt  CMakeUserPresets.json  README.md  README_zh.md  conanfile.txt
benchmarks/: CMakeLists.txt  string_operations_benchmark.cc
cmakeuserpresets/: CMakeUserPresets_clang.json  CMakeUserPresets_gcc.json  CMakeUserPresets_mingw.json  CMakeUserPresets_msvc.json
include/: conan-cmake-template.h
scripts/: add_license.py  detect.py
src/: conan-cmake-template.cc  main.cc
tests/: CMakeLists.txt  test_main.cc  unit_test1.cc  unit_test2.cc
